test-utils/proc-macros/tests/compile-fail/postgres_with_flag.rs
#![allow(unused_imports)]

use test_utils::upstream;

#[upstream(postgres, all, gtid)]
#[test]
fn postgres_gtid() {}

fn main() {}
