test-utils/proc-macros/tests/compile-fail/postgres_with_flag.stderr
error: flags are only valid for mysql, not postgres
 --> tests/compile-fail/postgres_with_flag.rs:5:27
  |
5 | #[upstream(postgres, all, gtid)]
  |                           ^^^^
